2011-02-14  Shinichiro Hamaji  <hamaji@chromium.org>

        Rebaseline chromium's test expectations for SVG tests.

        * platform/chromium-mac/svg/W3C-SVG-1.1/text-intro-05-t-expected.checksum: Added.
        * platform/chromium-mac/svg/W3C-SVG-1.1/text-intro-05-t-expected.png: Added.
        * platform/chromium-mac/svg/text/text-intro-05-t-expected.checksum:
        * platform/chromium-mac/svg/text/text-intro-05-t-expected.png:
        * platform/chromium/test_expectations.txt:

2011-02-14  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: follow up to r78460 with expectation updates.

        * inspector/styles-iframe-expected.txt:
        * platform/mac-leopard/http/tests/inspector/console-websocket-error-expected.txt:
        * platform/mac/http/tests/inspector/console-websocket-error-expected.txt:

2011-02-14  Shinichiro Hamaji  <hamaji@chromium.org>

        Rebaseline chromium's test expectation for http://trac.webkit.org/changeset/78449

        * platform/chromium-win/fast/gradients/css3-repeating-end-fill-expected.txt: Added.

2011-02-14  Shinichiro Hamaji  <hamaji@chromium.org>

        Rebaseline chromium's test expectations for inline-box-background-*

        * platform/chromium-linux/fast/inline/inline-box-background-expected.checksum: Added.
        * platform/chromium-linux/fast/inline/inline-box-background-expected.png: Added.
        * platform/chromium-linux/fast/inline/inline-box-background-long-image-expected.checksum: Added.
        * platform/chromium-linux/fast/inline/inline-box-background-long-image-expected.png: Added.
        * platform/chromium-linux/fast/inline/inline-box-background-repeat-x-expected.checksum: Added.
        * platform/chromium-linux/fast/inline/inline-box-background-repeat-x-expected.png: Added.
        * platform/chromium-linux/fast/inline/inline-box-background-repeat-y-expected.checksum: Added.
        * platform/chromium-linux/fast/inline/inline-box-background-repeat-y-expected.png: Added.