@@ -1,3 +1,10 @@
+2011-02-14  Pavel Feldman  <pfeldman@chromium.org>
+
+        Not reviewed: follow up to r78460 with more expectation updates.
+
+        * inspector/styles-iframe-expected.txt:
+        * inspector/styles-iframe.html:
+
 2011-02-14  Shinichiro Hamaji  <hamaji@chromium.org>
 
         Rebaseline chromium's test expectations for SVG tests.
